use fudge factor to prevent undesired cropping of top/bottom/left/right sides of SVG drawing

--- a/css/main.css
+++ b/css/main.css
@@ -63,8 +63,7 @@ textarea {
 html, body { margin:0; padding:0; overflow:hidden; width:100%; height:100%; }
 h1 {position:absolute;}
 #breadcrumbs {position:absolute; font-size:16px;}
-#main {display:table; margin:0 auto; width:90%; height:100%;}
-    #display_svg {display:table-cell; height:100%;}
+#display_svg {display:block; margin:0 auto; width:90%; height:100%;}
 #layout_svg {position:absolute; overflow:hidden; left:-20000px;}
 
 .edge path {stroke-opacity:0;}
